use propper logger

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ m_dep = cc.find_library('m')
 executable('pipemixer',
   'src/pipemixer.c',
   'src/tui.c',
+  'src/log.c',
   'src/event_loop.c',
   'src/xmalloc.c',
   'src/pw.c',
@@ -30,6 +31,7 @@ executable('pipemixer',
 
 executable('pwtest',
   'src/pwtest.c',
+  'src/log.c',
   'src/pw.c',
   'src/param_print.c',
   'src/props.c',
