refactor: switch to single-header version of event_loop.h

--- a/meson.build
+++ b/meson.build
@@ -22,12 +22,12 @@ executable('pipemixer',
   'src/pipemixer.c',
   'src/tui.c',
   'src/log.c',
-  'src/event_loop.c',
   'src/xmalloc.c',
   'src/pw.c',
   'src/param_print.c',
   'src/props.c',
   'src/stb_ds_impl.c',
+  'src/event_loop_impl.c',
   include_directories: ['thirdparty'],
   dependencies: [ncursesw_dep, pipewire_dep, m_dep],
   install: true)
@@ -38,7 +38,6 @@ executable('pwtest',
   'src/pw.c',
   'src/param_print.c',
   'src/props.c',
-  'src/event_loop.c',
   'src/xmalloc.c',
   'src/stb_ds_impl.c',
   include_directories: ['thirdparty'],
