refactor: better node param handling and parsing
thanks outfoxxed and quickshell for example code

--- a/meson.build
+++ b/meson.build
@@ -25,7 +25,7 @@ executable('pipemixer',
   'src/xmalloc.c',
   'src/pw.c',
   'src/param_print.c',
-  'src/props.c',
+  'src/utils.c',
   'src/stb_ds_impl.c',
   'src/event_loop_impl.c',
   include_directories: ['thirdparty'],
@@ -37,8 +37,8 @@ executable('pwtest',
   'src/log.c',
   'src/pw.c',
   'src/param_print.c',
-  'src/props.c',
   'src/xmalloc.c',
+  'src/utils.c',
   'src/stb_ds_impl.c',
   include_directories: ['thirdparty'],
   dependencies: [pipewire_dep, m_dep],
