feat: update example config

--- a/config.ini
+++ b/config.ini
@@ -21,3 +21,36 @@ top-right=╮
 bottom-left=╰
 bottom-right=╯
 
+[binds]
+; keybinds in the form action=key
+; supported keys are: all printable ASCII + enter/tab/backtab/space/backspace/up/down/right/left
+; bind by arbitrary keycode with action=code:1234 where 1234 is decimal keycode
+
+; default binds:
+focus-down=j
+focus-down=down
+focus-up=k
+focus-up=up
+
+volume-up=l
+volume-up=right
+volume-down=h
+volume-down=left
+
+tab-next=t
+tab-next=tab
+tab-prev=T
+tab-prev=backtab
+
+tab-playback=1
+tab-recording=2
+tab-input-devices=3
+tab-output-devices=4
+
+; mute-{enable,disable} are also valid
+mute-toggle=m
+; channel-lock-{enable,disable} are also valid
+channel-lock-toggle=space
+
+quit=q
+
