refactor: move borders config to interface section

--- a/config.ini
+++ b/config.ini
@@ -2,24 +2,24 @@
 ; in percents (1 means 1%)
 volume-step=1
 
-[borders]
+[interface]
 ; defaults:
-; left=│
-; right=│
-; top=─
-; bottom=─
-; top-left=┌
-; top-right=┐
-; bottom-left=└
-; bottom-right=┘
-; center-right=┤
-; center-left=├
+; border-left=│
+; border-right=│
+; border-top=─
+; border-bottom=─
+; border-top-left=┌
+; border-top-right=┐
+; border-bottom-left=└
+; border-bottom-right=┘
+; border-center-right=┤
+; border-center-left=├
 
 ; use rounded borders
-top-left=╭
-top-right=╮
-bottom-left=╰
-bottom-right=╯
+border-top-left=╭
+border-top-right=╮
+border-bottom-left=╰
+border-bottom-right=╯
 
 [binds]
 ; keybinds in the form action=key
