feat: add bar-{full,empty}-char config options

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,8 @@ volume-step=1
 ; border-bottom-right=┘
 ; border-center-right=┤
 ; border-center-left=├
+; bar-empty-char=-
+; bar-full-char=#
 
 ; use rounded borders
 border-top-left=╭
