feat: more flexible interface config

--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,17 @@ volume-step=1
 ; border-top-right=┐
 ; border-bottom-left=└
 ; border-bottom-right=┘
-; border-center-right=┤
-; border-center-left=├
+
+; volume-frame-top-left=┌
+; volume-frame-top-right=┐
+; volume-frame-bottom-left=└
+; volume-frame-bottom-right=┘
+; volume-frame-center-left=├
+; volume-frame-center-right=┤
+; volume-frame-mono-left=╶
+; volume-frame-mono-right=╴
+; volume-frame-focus=─
+
 ; bar-empty-char=-
 ; bar-full-char=#
 
@@ -22,6 +31,10 @@ border-top-left=╭
 border-top-right=╮
 border-bottom-left=╰
 border-bottom-right=╯
+volume-frame-top-left=╭
+volume-frame-top-right=╮
+volume-frame-bottom-left=╰
+volume-frame-bottom-right=╯
 
 [binds]
 ; keybinds in the form action=key
