--- a/config.ini
+++ b/config.ini
@@ -38,8 +38,11 @@ volume-frame-bottom-right=╯
 
 [binds]
 ; keybinds in the form action=key
-; supported keys are: all printable ASCII + enter/tab/backtab/space/backspace/up/down/right/left
-; bind by arbitrary keycode with action=code:1234 where 1234 is decimal keycode
+; supported keys are:
+; all printable ASCII: a, b, c, 1, 2, 3, etc.
+; some special characters: enter/tab/backtab/space/backspace/up/down/right/left
+; keycodes listed in curs_getch(3x) with KEY_ prefix removed: F1, END, NPAGE, etc.
+; arbitrary keycodes: code:1234 where 1234 is decimal representation of keycode
 
 ; default binds:
 focus-down=j
