feat: use wide character input and recognize unicode keybinds

--- a/config.ini
+++ b/config.ini
@@ -41,9 +41,8 @@ volume-frame-bottom-right=╯
 [binds]
 ; keybinds in the form action=key
 ; supported keys are:
-; all printable ASCII: a, b, c, 1, 2, 3, etc.
+; all printable ASCII/Unicode: a, b, c, 1, 2, 3, а, б, в, etc.
 ; some special characters: enter/tab/backtab/space/backspace/up/down/right/left
-; keycodes listed in curs_getch(3x) with KEY_ prefix removed: F1, END, NPAGE, etc.
 ; arbitrary keycodes: code:1234 where 1234 is decimal representation of keycode
 
 ; default binds:
