chore: add unbind to example config

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -76,3 +76,5 @@ quit=q
 ; additional keybinds you can configure:
 ; volume-set-N - set volume to N%
 
+; use unbind=key to unbind a key from any action
+
