add link to ncurses keycode list to readme + pipemixer.ini

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -44,6 +44,7 @@ volume-frame-bottom-right=╯
 ; all printable ASCII/Unicode: a, b, c, 1, 2, 3, а, б, в, etc.
 ; some special characters: enter/tab/backtab/space/backspace/up/down/right/left
 ; arbitrary keycodes: code:1234 where 1234 is decimal representation of keycode
+; ref: https://invisible-island.net/ncurses/ada/terminal_interface-curses_constants__ads.htm
 
 ; default binds:
 focus-down=j
