refactor: move pipewire code into pw/ subdir and split it

--- a/meson.build
+++ b/meson.build
@@ -29,9 +29,12 @@ executable('pipemixer',
   'src/tui.c',
   'src/log.c',
   'src/xmalloc.c',
-  'src/pw.c',
   'src/utils.c',
   'src/config.c',
+  'src/pw/common.c',
+  'src/pw/device.c',
+  'src/pw/node.c',
+  'src/pw/roundtrip.c',
   'src/stb_ds_impl.c',
   'src/event_loop_impl.c',
   include_directories: include_dirs,
