chore: update event_loop.h to pollen.h

--- a/meson.build
+++ b/meson.build
@@ -36,7 +36,7 @@ executable('pipemixer',
   'src/pw/node.c',
   'src/pw/roundtrip.c',
   'src/stb_ds_impl.c',
-  'src/event_loop_impl.c',
+  'src/pollen_impl.c',
   include_directories: include_dirs,
   link_with: [inih_lib],
   dependencies: [ncursesw_dep, pipewire_dep, m_dep],
