feat: keep track of all available device routes
will let us switch device ports in the future (like speakers/headphones)

--- a/meson.build
+++ b/meson.build
@@ -44,6 +44,8 @@ pipemixer_sources = [
   'src/pw/roundtrip.c',
   'src/stb_ds_impl.c',
   'src/pollen_impl.c',
+
+  'src/debug/put_params.c',
 ]
 
 include_dirs = [
