fix(config): embed default config as string and parse it as .ini file
fixes some bind function/argument mismatches and makes it easier to
manage and maintain

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -28,7 +28,7 @@ volume-max=150
 ; bar-empty-char=-
 ; bar-full-char=#
 
-; use rounded borders
+; example: use rounded borders
 border-top-left=╭
 border-top-right=╮
 border-bottom-left=╰
@@ -51,6 +51,9 @@ focus-down=j
 focus-down=down
 focus-up=k
 focus-up=up
+
+focus-first=g
+focus-last=G
 
 volume-up=l
 volume-up=right
