chore: update config example

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -75,6 +75,10 @@ mute-toggle=m
 ; channel-lock-{enable,disable} are also valid
 channel-lock-toggle=space
 
+select-port=p
+confirm-selection=enter
+cancel-selection=escape
+
 quit=q
 
 ; additional keybinds you can configure:
