refactor: split collections into several files

--- a/meson.build
+++ b/meson.build
@@ -40,8 +40,8 @@ pipemixer_sources = [
   'src/log.c',
   'src/xmalloc.c',
   'src/utils.c',
-  'src/strutils.c',
   'src/config.c',
+  'src/collections/string.c',
   'src/pw/common.c',
   'src/pw/device.c',
   'src/pw/node.c',
