fix: rename Ports to Routes everywhere
why did I even call them ports in the first place?

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -75,7 +75,7 @@ mute-toggle=m
 ; channel-lock-{enable,disable} are also valid
 channel-lock-toggle=space
 
-select-port=p
+select-route=p
 confirm-selection=enter
 cancel-selection=escape
 
