refactor: use better dynamic array impl

--- a/meson.build
+++ b/meson.build
@@ -42,7 +42,7 @@ pipemixer_sources = [
   'src/utils.c',
   'src/config.c',
   'src/collections/string.c',
-  'src/collections/array.c',
+  'src/collections/vec.c',
   'src/pw/common.c',
   'src/pw/device.c',
   'src/pw/node.c',
