--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -4,6 +4,8 @@ volume-step=1
 volume-min=0
 volume-max=150
 
+tab-order=playback,recording,output-devices,input-devices
+
 [interface]
 ; defaults:
 ; border-left=│
