--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -5,6 +5,7 @@ volume-min=0
 volume-max=150
 
 tab-order=playback,recording,output-devices,input-devices
+default-tab=playback
 
 [interface]
 ; defaults:
