--- a/meson.build
+++ b/meson.build
@@ -39,6 +39,7 @@ pipemixer_sources = [
   'src/log.c',
   'src/xmalloc.c',
   'src/utils.c',
+  'src/filter.c',
   'src/config.c',
   'src/signals.c',
   'src/eventloop.c',
