feat(pw): listen on nodes and record peak values

--- a/meson.build
+++ b/meson.build
@@ -47,6 +47,7 @@ pipemixer_sources = [
   'src/pw/common.c',
   'src/pw/device.c',
   'src/pw/node.c',
+  'src/pw/stream.c',
   'src/pw/roundtrip.c',
   'src/pw/events.c',
 ]
