meson: do not define PIPEMIXER_GIT_{TAG,BRANCH} if they are empty
ref #26

--- a/meson.build
+++ b/meson.build
@@ -10,20 +10,15 @@ add_project_arguments('-Wno-unused-parameter', language: 'c')
 git = find_program('git', required: false)
 if git.found()
   git_tag = run_command(git, 'describe', '--tags', check: false).stdout().strip()
-  if git_tag == ''
-    git_tag = 'unknown'
+  if git_tag != ''
+    add_project_arguments('-DPIPEMIXER_GIT_TAG="@0@"'.format(git_tag), language: 'c')
   endif
   git_branch = run_command(git, 'branch', '--show-current', check: false).stdout().strip()
-  if git_branch == ''
-    git_branch = 'unknown'
+  if git_branch != ''
+    add_project_arguments('-DPIPEMIXER_GIT_BRANCH="@0@"'.format(git_branch), language: 'c')
   endif
-else
-  git_tag = 'unknown'
-  git_branch = 'unknown'
 endif
 add_project_arguments('-DPIPEMIXER_VERSION="@0@"'.format(meson.project_version()), language: 'c')
-add_project_arguments('-DPIPEMIXER_GIT_TAG="@0@"'.format(git_tag), language: 'c')
-add_project_arguments('-DPIPEMIXER_GIT_BRANCH="@0@"'.format(git_branch), language: 'c')
 
 pipewire_dep = dependency('libpipewire-0.3')
 ncursesw_dep = dependency('ncursesw')
