--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -4,7 +4,7 @@ volume-step=1
 volume-min=0
 volume-max=150
 
-tab-order=playback,recording,output-devices,input-devices
+tab-order=playback,recording,output-devices,input-devices,cards
 default-tab=playback
 
 [interface]
