chore: update man pages and example config

--- a/pipemixer.ini
+++ b/pipemixer.ini
@@ -78,7 +78,11 @@ mute-toggle=m
 ; channel-lock-{enable,disable} are also valid
 channel-lock-toggle=space
 
+set-default=D
+
 select-route=p
+select-profile=P
+
 confirm-selection=enter
 cancel-selection=escape
 
