meson: add option to install shell completions

--- a/meson.build
+++ b/meson.build
@@ -76,3 +76,8 @@ install_data(
   install_dir: join_paths(get_option('mandir'), 'man5'),
 )
 
+if get_option('shell-completions')
+  zsh_install_dir = join_paths(get_option('datadir'), 'zsh', 'site-functions')
+  install_data('completion/_pipemixer', install_dir: zsh_install_dir)
+endif
+
